Fixed Mole Smash shifting

--- a/Frontend/src/pages/WhacAMole.css
+++ b/Frontend/src/pages/WhacAMole.css
@@ -1,19 +1,3 @@
-body {
-  position: relative;
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url("/public/mole-background.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
 #root {
   height: 100%;
   width: 100%;
@@ -21,6 +5,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 
 .game-container {
   display: flex;
@@ -237,11 +222,7 @@ body {
   font-size: 1.2em;
   font-weight: bold;
   text-shadow: 1px 1px 2px #000;
-}
-
-.score {
-  margin-top: 5px;
-  margin-left: 10px;
+  padding: 5px 0;
 }
 
 .top-scores li.header {
@@ -256,14 +237,31 @@ body {
   color: #bcfc55;
 }
 
-.top-scores li span {
+.username-header {
   flex: 1;
-  text-align: center;
+  display: flex;
+  justify-content: center; 
+  align-items: center;  
 }
 
-.top-scores li span:nth-child(2) {
-  flex: 0.1;
+.score-header {
+  flex: 1;
+  display: flex;
+  margin-left: 50px;
+  justify-content: center; 
+  align-items: center;    
 }
+
+.username {
+  justify-content: flex-start;
+}
+
+.players-score {
+  justify-content: flex-end;
+  padding-right: 36px;
+
+}
+
 
 .score-badge {
   display: flex;
@@ -334,10 +332,6 @@ body {
   background-color: #dddddd53;
   border-radius: 50%;
   position: absolute;
-}
-
-.mole-hole.game-over {
-  cursor: pointer;
 }
 
 .burst-image {
